Answrs: fixed footer div overlap problem (#23713)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@13232 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/answers/css/main.css
+++ b/skins/answers/css/main.css
@@ -416,6 +416,7 @@ div.inline_form_inside {
 	margin-right: 310px;
 	padding: 30px 30px 15px 15px;
 	position: relative;
+	clear: both;
 }
 #wikia_footer a {
 	color: #CCC;
